--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -1,5 +1,32 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-
+table.calorie {
+  font-size:16px;
+  table-layout: fixed;
+  width: 100%;
+}
+th  {
+  border: 1px solid #dedede;
+  padding:  10px;
+  line-height:22px;
+}
+tr:nth-child(even)  {
+  line-height:26px;
+  background-color:#ecf1f2;
+}
+tr th:nth-child(1)  {
+  color:#fff;
+  font-size:18px;
+  line-height:26px;
+  background-color: #2244aa;
+}
+tfoot {
+  border-top: 2px dashed #000;
+}
+thead {
+  background-color:#2244aa;
+  color:#fff;
+  font-size:18px;
+}
 /* 回答はここに書いてね */
