--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -1,5 +1,93 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.back{
+  height: 500px;
+  width: 500px;
+  background-color:#ecf1f2;
+  margin: auto;
+  position: relative;
+}
+.square{
+  font-weight: bold;
+  height: 100px;
+  width: 100px;
+  text-align: center;
+  font-size:  30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.skin{
+  position: absolute;
+  top:  40px;
+  left:200px;
+  background-color:#ffefd3;
+  z-index: 1;
+}
+.indigo{
+  position: absolute;
+  top:  120px;
+  left: 280px;
+  background-color:#7084de;
+  z-index: 2;
+}
+.cyan{
+  position: absolute;
+  top:  200px;
+  left: 360px;
+  background-color:#d0ecea;
+  z-index: 3;
+}
+.kuri{
+    position: absolute;
+    top:  280px;
+    left: 280px;
+    background-color:#8b7a5e;
+    z-index: 4;
+  }
+.sky{
+  position: absolute;
+  top:  360px;
+  left: 200px;
+  background-color:#9fd6d2;
+  z-index: 5;
+}
+.cream{
+  position: absolute;
+  top:  280px;
+  left: 120px;
+  background-color:#fffee4;
+  z-index: 6;
+}
+.beige{
+  position: absolute;
+  top:  200px;
+  left: 40px;
+  background-color:#deae70;
+  z-index: 7;
+}
+.pink{
+  position: absolute;
+  top:  120px;
+  left: 120px;
+  background-color:#de70cf;
+  z-index: 8;
+}
+.pink::after{
+  position: absolute;
+  top:  0px;
+  left: 80px;
+  height: 20px;
+  width:  20px;
+  background-color:#ffefd3;
+  content:"";
+}
+.blue{
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  background-color:#2b69a3;
+}
 
 /* 回答はここに書いてね */
