--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -1,5 +1,31 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
+.q7__wrapper{
+  font-size:16px;
+}
+.q7__inner{
+width:500px;
+}
+.q7__box{
+  text-align: left;
+  box-sizing: border-box;
+  width:225px;
+  margin-right:50px;
+}
+.q7__box:nth-child(2n){
+  margin-right: 0;
+}
+.q7__left{
+  float:left;
+}
+.q7__right{
+  float:right;
+}
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
 
 /* 回答はここに書いてね */
