--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -24,7 +24,6 @@
 .q8__text{
   word-break: break-all;
   background-color:	rgba(0,0,0,0.0);
-  -webkit-transition:	all 0.6s ease;
 }
 .q8:hover .car__picture{
   transform:  scale(1.5);
@@ -36,9 +35,46 @@
   transition:		all 0.6s ease;
 }
 /* ここから２ */
-.loading{
-animation-duration: 3s;
-animation-name: slidein;
-animation-iteration-count: infinite;
+.loading {
+  position: relative;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 10px solid #ecf1f2;
+  border-radius: 60px;
+  -webkit-animation: rotating 1.1s linear infinite;
+  animation: rotating 1.1s linear infinite;
+  border-right-color: #00bcd4;
+}
+.loading:before {
+  position: absolute;
+  display: inline-block;
+  content: " ";
+  left: 100%;
+  top: 50%;
+  background-color: #fff;
+}
+.loading:after {
+  position: absolute;
+  display: inline-block;
+  content: " ";
+  left: 100%;
+  top: 50%;
+}
+@-webkit-keyframes rotating {
+  0% {
+      -webkit-transform: rotate(0deg);
+  }
+  100% {
+      -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes rotating {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
 }
 /* 回答はここに書いてね */
