--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -2,6 +2,7 @@
 
 /* 回答はここに書いてね */
 .calorie {
+  text-align: center;
   font-size:16px;
   table-layout: fixed;
   width: 100%;
@@ -11,20 +12,19 @@
   padding:  10px;
   line-height:26px;
 }
-.calorie > tbody > tr > th {
+.calorie > tbody > tr > th,
+.calorie > tfoot > tr > th,
+.calorie > tbody > tr > td,
+.calorie > tfoot > tr > td { 
   border: 1px solid #dedede;
   padding:  10px;
 }
-.calorie > tfoot > tr > th {
-  border: 1px solid #dedede;
-  padding:  10px;
-}
-tr:nth-child(even)  {
+tr:nth-child(even) {
   line-height:26px;
-  background-color:#ecf1f2;
+  background-color: #ecf1f2;
 }
-tr th:nth-child(1)  {
-  color:#fff;
+tr th:nth-child(1) {
+  color: #fff;
   font-size:18px;
   line-height:26px;
   background-color: #2244aa;
@@ -33,8 +33,8 @@ tfoot {
   border-top: 2px dashed #000;
 }
 thead {
-  background-color:#2244aa;
-  color:#fff;
-  font-size:18px;
+  background-color: #2244aa;
+  color: #fff;
+  font-size: 18px;
 }
 /* 回答はここに書いてね */
