--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -8,9 +8,8 @@
   position: relative;
   overflow: hidden;
 }
-.q8__1__text {
+.q82__text {
   color: #fff;
-  width: 500px;
   font-size: 16px;
   line-height: 16px;
   opacity: 0;
@@ -21,7 +20,7 @@
   box-sizing: border-box;
   padding: 0 20px 20px 20px;
 }
-.q8__text {
+.q82__text__box {
   word-break: break-all;
   background-color:	rgba(0,0,0,0.0);
 }
@@ -29,7 +28,7 @@
   transform: scale(1.5);
   transition: all 0.6s ease;
 }
-.q8:hover .q8__1__text {
+.q8:hover .q82__text {
   opacity: 1;
   margin-bottom: 0;
   transition:	all 0.6s ease;
