--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -1,39 +1,45 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-.q8 {
+.q8__wrapper {
   margin: 0 auto;
   width: 500px;
-  text-align: center;
+  height: 333px;
+  cursor: pointer;
   position: relative;
   overflow: hidden;
 }
 .q82__text {
-  color: #fff;
-  font-size: 16px;
-  line-height: 16px;
-  opacity: 0;
   position: absolute;
   bottom: 0;
   left: 0;
-  margin-bottom: -80px;
+  padding: 20px;
+  color: #fff;
   box-sizing: border-box;
-  padding: 0 20px 20px 20px;
+  word-break: break-all;
+}
+.car__picture {
+  transition: all 0.5s ;
 }
 .q82__text__box {
-  word-break: break-all;
-  background-color:	rgba(0,0,0,0.0);
+  position: absolute;
+  left: 0;
+  bottom: -100%;
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ;
+  background: linear-gradient(rgba(0,0,0,0.0),rgba(0,0,0,0.8));
 }
-.q8:hover .car__picture {
+.q8__wrapper:hover .car__picture {
   transform: scale(1.5);
-  transition: all 0.6s ease;
 }
-.q8:hover .q82__text {
-  opacity: 1;
-  margin-bottom: 0;
-  transition:	all 0.6s ease;
+.q8__wrapper:hover .q82__text__box {
+  bottom: 0;
 }
 /* ここから２ */
+.q8__anime {
+  text-align: center;
+}
 .loading {
   position: relative;
   display: inline-block;
