--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -3,20 +3,17 @@
 /* 回答はここに書いてね */
 .q9__text__box {
   margin: 0 auto;
-  text-align:center;
+  width: 500px;
 }
 .q9__text {
   position: relative;
-  text-align: left;
-  display: inline-block;
   padding: 20px;
   width: 500px;
-  line-height: 16px;
   border: 5px solid #222;
-  z-index: 0;
   border-radius: 30px;
 }
-.q9__text:before,.q9__text:after {
+.q9__text:before,
+.q9__text:after {
   content: "";
   position: absolute;
   border: 20px solid transparent;
@@ -24,12 +21,11 @@
 .q9__text:before {
   top: 100%;
   left: 20px;
-  border-top: 20px solid #222;
+  border-top: 20px solid #222222;
 }
 .q9__text:after {
   left: 20px;
   bottom: -33px;
   border-top: 20px solid #ffffff;
-  z-index: 1;
 }
 /* 回答はここに書いてね */
